NetBSD Problem Report #37540

From martin@aprisoft.de  Fri Dec 14 11:07:08 2007
Return-Path: <martin@aprisoft.de>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id CFD9863BADB
	for <gnats-bugs@gnats.NetBSD.org>; Fri, 14 Dec 2007 11:07:07 +0000 (UTC)
Message-Id: <20071214110649.5BD0EAF580E@emmas.aprisoft.de>
Date: Fri, 14 Dec 2007 12:06:49 +0100 (CET)
From: martin@duskware.de
Reply-To: martin@duskware.de
To: gnats-bugs@NetBSD.org
Subject: audio is confused after boot
X-Send-Pr-Version: 3.95

>Number:         37540
>Category:       kern
>Synopsis:       audio is confused after boot
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Dec 14 11:10:08 +0000 2007
>Closed-Date:    Tue Jan 17 12:44:15 +0000 2017
>Last-Modified:  Tue Jan 17 12:44:15 +0000 2017
>Originator:     Martin Husemann
>Release:        NetBSD 4.99.42
>Organization:
>Environment:
System: NetBSD nelly.aprisoft.de 4.99.42 NetBSD 4.99.42 (NELLY) #4: Fri Dec 14 11:57:06 CET 2007 martin@emmas.aprisoft.de:/nelly/usr/src/sys/arch/sparc64/compile/NELLY sparc64
Architecture: sparc64
Machine: sparc64
>Description:

After booting the first audio playback "stutters" on my U2. If I stop
the playback and start it again, everything is fine. This might be
driver related:

audiocs0 at sbus0 slot 13 offset 0xc000000 vector 24 ipl 8: CS4231A
audio0 at audiocs0: full duplex

but I can't reproduce the problem a sparc Krups, which uses the same
audio chipset. This started happening after the recent soft interrupt
changes + pmf merge, but it still happens with all pmf_* calls 
commented out in sys/dev/audio.c.

>How-To-Repeat:
Reboot, run "mpg123 *.mp3", notice repeated samples and ugly sound
output, ^C it, try again: notice it works fine now.

>Fix:
n/a

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: kern-bug-people->ad
Responsible-Changed-By: ad@netbsd.org
Responsible-Changed-When: Fri, 28 Dec 2007 14:22:40 +0000
Responsible-Changed-Why:
I think it's related to the changes I made to this driver.


From: Andrew Doran <ad@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/37540 CVS commit: src/sys/arch/sparc64
Date: Tue, 29 Apr 2008 14:06:31 +0000 (UTC)

 Module Name:	src
 Committed By:	ad
 Date:		Tue Apr 29 14:06:31 UTC 2008

 Modified Files:
 	src/sys/arch/sparc64/include: cpu.h
 	src/sys/arch/sparc64/sparc64: clock.c intr.c

 Log Message:
 Mirror sparc and provide sparc_softintr stuff. There is no functional
 change, beyond renaming a function and putting back disestablish/schedule.
 PR kern/37540.


 To generate a diff of this commit:
 cvs rdiff -r1.79 -r1.80 src/sys/arch/sparc64/include/cpu.h
 cvs rdiff -r1.95 -r1.96 src/sys/arch/sparc64/sparc64/clock.c
 cvs rdiff -r1.57 -r1.58 src/sys/arch/sparc64/sparc64/intr.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: ad@NetBSD.org
State-Changed-When: Tue, 29 Apr 2008 14:10:25 +0000
State-Changed-Why:
This should be fixed now, can you please test?


From: Andrew Doran <ad@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/37540 CVS commit: src/sys/dev/sbus
Date: Tue, 29 Apr 2008 14:10:00 +0000 (UTC)

 Module Name:	src
 Committed By:	ad
 Date:		Tue Apr 29 14:10:00 UTC 2008

 Modified Files:
 	src/sys/dev/sbus: cs4231_sbus.c

 Log Message:
 Use sparc_softintr to pass down device interrupt to the correct IPL.
 MI slowpath softints are fine for notifications but have to much latency
 to provide the card with the next block to play/record. PR kern/37540.


 To generate a diff of this commit:
 cvs rdiff -r1.38 -r1.39 src/sys/dev/sbus/cs4231_sbus.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: feedback->open
State-Changed-By: martin@NetBSD.org
State-Changed-When: Tue, 29 Apr 2008 16:09:29 +0000
State-Changed-Why:
Sorry, it still happens


From: Martin Husemann <martin@duskware.de>
To: gnats-bugs@NetBSD.org
Cc: ad@NetBSD.org
Subject: Re: kern/37540 (audio is confused after boot)
Date: Tue, 29 Apr 2008 18:17:10 +0200

 Note, however, that your last change did improve audio playback a lot - starting
 up firefox does not disturb audio any more.

 On sparc (Krups, pretty fast v8 cpu) with the same audio chip on pci,
 audio playback is mostly unusable, probably due to latency.

 Martin

From: Andrew Doran <ad@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/37540 CVS commit: src/sys/dev/ebus
Date: Tue, 29 Apr 2008 18:08:03 +0000 (UTC)

 Module Name:	src
 Committed By:	ad
 Date:		Tue Apr 29 18:08:03 UTC 2008

 Modified Files:
 	src/sys/dev/ebus: cs4231_ebus.c

 Log Message:
 Replicate sbus fixes for PR kern/37540.


 To generate a diff of this commit:
 cvs rdiff -r1.25 -r1.26 src/sys/dev/ebus/cs4231_ebus.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

Responsible-Changed-From-To: ad->kern-bug-people
Responsible-Changed-By: ad@NetBSD.org
Responsible-Changed-When: Tue, 29 Apr 2008 18:15:22 +0000
Responsible-Changed-Why:
I fixed the problems that I introduced, I don't know what the remaining issues might be caused by.


State-Changed-From-To: open->closed
State-Changed-By: martin@NetBSD.org
State-Changed-When: Tue, 17 Jan 2017 12:44:15 +0000
State-Changed-Why:
Audio works fine on the U2 in -current


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.