Use sparc_softintr to pass down device interrupt to the correct IPL. MI slowpath softints are fine for notifications but have to much latency to provide the card with the next block to play/record. PR kern/37540.